--- a/articles/7f5f5a979f20b6.md
+++ b/articles/7f5f5a979f20b6.md
@@ -1,12 +1,12 @@
 ---
-title: "hydra による OAuth 2.0 の認可サーバー/ OIDC の IdP の実装イメージ"
+title: "Hydra による OAuth 2.0 の認可サーバー/ OIDC の IdP の実装イメージ"
 emoji: "💋"
 type: "idea"
-topics: ["oauth2", "hydra", "openidconnect", "ory"]
+topics: ["oauth2", "Hydra", "openidconnect", "ory"]
 published: true
 ---
 
-# hydra とは
+# Hydra とは
 https://github.com/ory/hydra
 
 以下 README.md の引用です。
@@ -15,25 +15,25 @@ https://github.com/ory/hydra
 
 ざっと触ってみたところ、ユーザーとのインタラクションは提供せず、自前で実装した認証やユーザー管理を行うサービスと連携して、OIDC/OAuth 2.0 の機能だけを提供するための製品のようです。
 
-## hydra が提供する（しない）機能
+## Hydra が提供する（しない）機能
 
-hydra は以下のようなエンドポイントを提供します。
+Hydra は以下のようなエンドポイントを提供します。
 
 * クライアントの作成や削除、取得
 * 認可エンドポイント、トークンエンドポイント、Revokation、Introspection、ディスカバリや JWK 関連など
 * ログインや同意を行うサーバーと連携するためのエンドポイント
 
 逆に以下のような機能や API は提供していません。
-* hydra 自身はログインや同意を行うための画面を提供しない
-* hydra 自身はトークン以外にユーザーの情報を管理しない
+* Hydra 自身はログインや同意を行うための画面を提供しない
+* Hydra 自身はトークン以外にユーザーの情報を管理しない
   * それに関連する API も提供しない
 
 ## 実装イメージ
 
-hydra が提供している[チュートリアル](https://www.ory.sh/hydra/docs/5min-tutorial)では、以下のエンドポイントを持ったサーバーが立ち上がります。
+Hydra が提供している[チュートリアル](https://www.ory.sh/hydra/docs/5min-tutorial)では、以下のエンドポイントを持ったサーバーが立ち上がります。
 
 * ログインと同意画面を提供するサーバー: 3000
-* hydra: 4444
+* Hydra: 4444
 * クライアント: 5555
 
 チュートリアルで構築される環境では、以下のような流れでクライアントがトークンを取得します。
@@ -44,25 +44,25 @@ hydra が提供している[チュートリアル](https://www.ory.sh/hydra/docs
 
 大雑把な流れは以下となります。
 
-1. クライアントから hydra に遷移
-2. hydra から ログインサーバーにリダイレクト
-3. ログインサーバーでユーザーを認証し、hydra にリダイレクト
-4. hydra から 同意サーバーにリダイレクト
-5. 同意サーバーでユーザーの同意をとったら hydra にリダイレクト
-6. hydra から クライアントにトークンを渡す
+1. クライアントから Hydra に遷移
+2. Hydra から ログインサーバーにリダイレクト
+3. ログインサーバーでユーザーを認証し、Hydra にリダイレクト
+4. Hydra から 同意サーバーにリダイレクト
+5. 同意サーバーでユーザーの同意をとったら Hydra にリダイレクト
+6. Hydra から クライアントにトークンを渡す
 
-上記の通り、ログイン処理（ID/PWによる認証）や同意を取得する処理には hydra は関わりません。
-代わりに別途実装したログイン処理によるログインの結果と、認証を行ったユーザーの ID を [API](https://www.ory.sh/hydra/docs/concepts/login#accepting-the-login-flow) で hydra に通知します。（同意についても似たような流れになります）
+上記の通り、ログイン処理（ID/PWによる認証）や同意を取得する処理には Hydra は関わりません。
+代わりに別途実装したログイン処理によるログインの結果と、認証を行ったユーザーの ID を [API](https://www.ory.sh/hydra/docs/concepts/login#accepting-the-login-flow) で Hydra に通知します。（同意についても似たような流れになります）
 
-チュートリアルでは ID/PW による認証でしたが、hydra が意識するのは認証後の API のみなので例えば MFA を追加したり、WebAuthn によるパスワードレス認証を実装したり、といったことも可能です。
-認証処理そのものが hydra から分離されているため、既存のログイン機能があるサービスからトークンを払い出す際にも有用かもしれません。
+チュートリアルでは ID/PW による認証でしたが、Hydra が意識するのは認証後の API のみなので例えば MFA を追加したり、WebAuthn によるパスワードレス認証を実装したり、といったことも可能です。
+認証処理そのものが Hydra から分離されているため、既存のログイン機能があるサービスからトークンを払い出す際にも有用かもしれません。
 
 ## まとめ
 
-* hydra はサービスと連携して、OIDC/OAuth 2.0 の IdP /認可サーバーを実装するための製品です
-* hydraはクライアントやトークンを管理しますが、ユーザー情報は管理しません
+* Hydra はサービスと連携して、OIDC/OAuth 2.0 の IdP /認可サーバーを実装するための製品です
+* Hydraはクライアントやトークンを管理しますが、ユーザー情報は管理しません
 * ユーザーの管理やログイン、同意画面は自前で実装する必要があります
-* 自前で実装したログインなどの処理が終わったら結果を hydra の API で連携します
+* 自前で実装したログインなどの処理が終わったら結果を Hydra の API で連携します
 
 ## 参考資料
 * [GitHub | ory/hydra](https://github.com/ory/hydra)
